--- a/6 Months/index.html
+++ b/6 Months/index.html
@@ -109,10 +109,10 @@
             <div id="gallery">
               <img src="img/chris1.JPG"/>
               <img src="img/chris12.jpg"/>
-              <img src="img/chris13.jpg"/>
+              <img src="img/chris10.jpg"/>
               <img src="img/chris6.jpg"/>
-              <img src="img/chris9.jpeg"/>
-              <img src="img/IMG_8137.jpeg"/>
+              <img src="img/chris4.JPG"/>
+              <img src="img/chris5.JPG"/>
               <img src="img/chris8.JPG"/>
               <img src="img/IMG_2351.jpeg"/>
               <img src="img/IMG_8024.JPG"/>
