--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
         <div id="title-div">
             <h1><span>To</span><br>Christian</h1>
-            <img id="title-img-gino" src="IMG/chris15.jpg">
+            <img id="title-img-gino" src="img/chris15.jpg">
             <div id="title-img-gino-background"></div>
             <h2><span>From</span><br>Sydney</h2>
             <img id="title-img-jackson" src="img/syd1.jpg">
