--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             </div>
             <div id="gallery">
               <img src="img/chris1.JPG"/>
-              <img src="img/chris12.jpg"/>
+              <img src="img/chris12.JPG"/>
               <img src="img/chris10.jpg"/>
               <img src="img/chris6.jpg"/>
               <img src="img/chris4.JPG"/>
