--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
         <div id="intro-2-div">
             <p id="intro-2-text"> This is all for you, my special beautiful bubba bear :)</p>
-            <img id="intro-2-img" src="img/chris7.JPG">
+            <img id="intro-2-img" src="img/chris7.jpg">
         </div>
 
         <div id="intro-3-div">
@@ -110,7 +110,7 @@
               <img src="img/chris1.JPG"/>
               <img src="img/chris12.JPG"/>
               <img src="img/chris10.jpg"/>
-              <img src="img/chris6.jpg"/>
+              <img src="img/chris6.JPG"/>
               <img src="img/chris4.JPG"/>
               <img src="img/chris5.JPG"/>
               <img src="img/chris8.JPG"/>
