--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
         <div id="sweater-div">
             <img id="sweater-img-1" src="img/IMG_8142.JPG">
-            <p id="sweater-text">Your brightful  <br> energy </p>
+            <p id="sweater-text">Your bright and silly  <br> energy </p>
             <img id="sweater-img-2" src="img/IMG_3550.JPG">
         </div>
 
